borders and resizing row fill is compete, just looking to fix text alignment

--- a/module2-solution/css/mod2-framework.css
+++ b/module2-solution/css/mod2-framework.css
@@ -43,8 +43,10 @@ p {
 @media (min-width: 992px) {
   .col-desktop{
     float: left;
+    margin-left: 1%;
+    margin-bottom: .5%;
     border: 1px solid black;
-    width: 33.33%;
+    width: 31.83%;
     background-color: inherit;
   }
 }
@@ -53,16 +55,34 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-tablet{
     float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 1%;
     border: 1px solid black;
-    width: 50%;
+    width: 48%;
     background-color: inherit;
   }
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-tablet2{
+      float: left;
+      margin-left: 1%;
+      margin-right: 1%;
+      margin-bottom: 1%;
+      border: 1px solid black;
+      width: 98%;
+      background-color: inherit;
+    }
+  }
 
 /********** Mobile View **********/
 @media (max-width: 767px) {
     .col-mobile{
       float: left;
+      margin-left: 1%;
+      margin-right: 1%;
+      margin-bottom: 1%;
       border: 1px solid black;
       background-color: inherit;
     }
